<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- main -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">VsFootball</string>
    <string name="menu_settings">Settings</string>
    <string name="string_no">No</string>
    <string name="string_yes">Yes</string>
    <string name="title">Vs. Football</string>
    <!-- config -->
    <string name="app_id">558638020867642</string>
    <string name="platform">Android</string>
    <!-- login -->
    <string name="title">Vs. Football</string>
    <string name="login_in_with_facebook">Log in with Facebook</string>
    <string name="use_facebook_sign_in_to">Use Facebook sign in to</string>
    <string name="login_tv_facebook_2">challenge your friends today!</string>
    <string name="or">Or</string>
    <string name="login_with_football_sign_on">Login with Vs.Football sign on</string>
    <string name="create_a_free_account">Create a free account now!</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_remember">Remember password</string>
    <string name="login_login">Log in</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="login_input_username_null">Username missing</string>
    <string name="login_input_password_null">Password missing</string>
    <string name="input_username_error">Username is illegal</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_failed_please_check_network">Login failed! Please check your network.</string>
    <!-- regist -->
    <string name="regist_tip">Your account info:</string>
    <string name="regist_describe">Next, check your email and click \n the link to verify your account,\n then you\'re ready to play!</string>
    <string name="regist_email">Email</string>
    <string name="regist_password">Password</string>
    <string name="regist_confirm">Password Confirmation</string>
    <string name="regist_firstname_prompt">First Name (optional)</string>
    <string name="regist_lastname_prompt">Last Name (optional)</string>
    <string name="regist_signup">Sign Up</string>
    <string name="regist_cancel">Cancel</string>
    <string name="register_input_password_null">Password missing</string>
    <string name="password_not_match">Yours passwords do not match</string>
    <string name="register_input_firstname_null">First name missing</string>
    <string name="register_input_lastname_null">Last name missing</string>
    <string name="register_input_email_null">Email missing</string>
    <string name="register_input_email_error">Email format is not correct</string>
    <string name="process_login">Processing Login</string>
    <string name="processing">Processing</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <!-- password recovery -->
    <string name="forget_email">E-mail:</string>
    <string name="forget_question">Forgot Your Password?</string>
    <string name="forget_discribe_1">Just enter your email and</string>
    <string name="forget_discribe_2">we\'ll send you an email to</string>
    <string name="forget_discribe_3">reset it.</string>
    <string name="forget_input_email">Email address</string>
    <string name="forget_submit">Submit</string>
    <string name="forget_cancel">Camcel</string>
    <string name="process_sending">Sending...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- play combo -->
    <string name="combo_waiting">Waiting for %1$s to select their play.</string>
    <!-- play outcome -->
    <string name="outcome_dialog">Gain of 6 on\nthe play! \n\nNow 3rd and 4\non your own 44</string>
    <!-- feedback -->
    <string name="feedback_describe">Let us know how we can\nimprove your experience \nwith VS. Football:</string>
    <string name="feedback_thank_you">Thank you for you feedback!</string>
    <!-- new game -->
    <string name="new_game_email_describe">Invite a friend to play!\n\nJust enter their email and\nwe\'ll send them an email with\na link to load the app and\nstart a game!</string>
    <string name="new_game_options_doyou">Do you want start on:</string>
    <string name="new_game_options_note">Note : You will be opposite for start of 2nd half </string>
    <string name="new_game_options_enter">Enter your Team Name</string>
    <string name="loading_game_list">Loading game list...</string>
    <!-- dialog -->
    <string name="dialog_start_game_title">Start Game</string>
    <string name="dialog_start_game_message">Would you like start a game\nwith %1$s</string>
    <string name="dialog_play_confirmation_title">Play Confirmation</string>
    <string name="dialog_play_confirmation_message">Run %1$s?</string>

</resources>