<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_signup_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_describe"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="20dp"
        android:text="@string/regist_tip"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_regist"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_signup_tip"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_confirm"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_firstname_prompt"
            android:maxLength="50"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regist_lastname_prompt"
            android:maxLength="50"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_describe"
        android:layout_below="@+id/ll_regist"
        android:background="@drawable/shape_bg"
        android:padding="2dp"
        android:text="@string/regist_cancel"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_describe"
        android:layout_below="@+id/ll_regist"
        android:background="@drawable/shape_bg"
        android:padding="2dp"
        android:text="@string/regist_signup"
        android:textColor="@color/black" />

    <TextView
        android:id="@id/tv_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signup"
        android:layout_centerHorizontal="true"
        android:text="@string/regist_describe"
        android:textSize="20sp" />

</RelativeLayout>