<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".PasswordRecoveryActivity" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/ll_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_question"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forget_discribe_1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/forget_discribe_2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/forget_discribe_3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:hint="@string/forget_input_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/ll_input_email"
        android:layout_below="@+id/ll_input_email"
        android:layout_marginTop="70dp"
        android:background="@drawable/shape_bg"
        android:padding="2dp"
        android:text="@string/forget_submit"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll_input_email"
        android:layout_below="@+id/ll_input_email"
        android:layout_marginTop="70dp"
        android:background="@drawable/shape_bg"
        android:padding="2dp"
        android:text="@string/forget_cancel"
        android:textColor="@color/black" />

</RelativeLayout>