<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_new_game_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/rlyt_possession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_new_game_vs"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_black_frame" >

        <TextView
            android:id="@+id/tv_new_game_do_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/new_game_options_doyou"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg_possession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_new_game_do_you"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="5dp" >

            <RadioButton
                android:id="@+id/rb_offensive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg"
                android:button="@null"
                android:checked="true"
                android:padding="10dp"
                android:text="Offensive"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_defensive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg"
                android:button="@null"
                android:padding="10dp"
                android:text="Defensive"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_possession"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/new_game_options_note"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/rlyt_possession"
        android:layout_alignRight="@id/rlyt_possession"
        android:layout_below="@id/rlyt_possession"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/tv_new_game_options_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/new_game_options_enter"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_new_game_options_team_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_new_game_options_enter"
            android:layout_marginTop="10dp"
            android:hint="Previous Team Name"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_new_game_options_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_bg"
        android:padding="10dp"
        android:text="Call first play"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>